--- a/capacidades/src/main/resources/application.yaml
+++ b/capacidades/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   r2dbc:
-    url: r2dbc:mysql://host.docker.internal:3306/capacidadesdb
+    url: r2dbc:mysql://localhost:3306/capacidadesdb
     username: root
     password: ""
   datasource:
