--- a/tecnologias/src/main/resources/application.yaml
+++ b/tecnologias/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   r2dbc:
-    url: r2dbc:mysql://localhost:3306/tecnologiasdb
+    url: r2dbc:mysql://host.docker.internal:3306/tecnologiasdb
     username: root
     password: ""
   datasource:
