--- a/bootcamps/src/main/resources/application.yaml
+++ b/bootcamps/src/main/resources/application.yaml
@@ -14,5 +14,14 @@ server:
 springdoc:
   api-docs:
     path: /api-docs
+    enabled: true
   swagger-ui:
     path: /swagger-ui.html
+    enabled: true
+    operations-sorter: method
+    tags-sorter: alpha
+    doc-expansion: none
+    disable-swagger-default-url: true
+    display-request-duration: true
+  packages-to-scan: gabs.bootcamps.infraestructure.adapter.in
+  paths-to-match: /bootcamp/**
