--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   bootcamps-micro:
-    build: ./bootcamps-micro
+    build: ./bootcamps
     container_name: bootcamps-micro
     ports:
       - "8082:8082"
@@ -11,7 +11,7 @@ services:
       - micro-red
 
   reports-micro:
-    build: ./reports-micro
+    build: ./reports
     container_name: reports-micro
     ports:
       - "8084:8084"
@@ -20,7 +20,7 @@ services:
       - micro-red
 
   personas-micro:
-    build: ./personas-micro
+    build: ./personas
     container_name: personas-micro
     ports:
       - "8083:8083"
@@ -29,7 +29,7 @@ services:
       - micro-red
 
   capacidades-micro:
-    build: ./capacidades-micro
+    build: ./capacidades
     container_name: capacidades-micro
     ports:
       - "8081:8081"
@@ -38,7 +38,7 @@ services:
       - micro-red
 
   tecnologias-micro:
-    build: ./tecnologias-micro
+    build: ./tecnologias
     container_name: tecnologias-micro
     ports:
       - "8085:8085"
