--- a/reports/src/main/resources/application.yaml
+++ b/reports/src/main/resources/application.yaml
@@ -9,8 +9,19 @@ spring:
 server:
   port: 8084
 
+
+# OpenAPI/Swagger Configuration
 springdoc:
   api-docs:
     path: /api-docs
   swagger-ui:
     path: /swagger-ui.html
+    tags-sorter: alpha
+    operations-sorter: alpha
+    doc-expansion: none
+    disable-swagger-default-url: true
+    display-request-duration: true
+  packages-to-scan: gabs.reports.infraestructure.adapter.in
+  paths-to-match: /api/v1/**
+  default-produces-media-type: application/json
+  default-consumes-media-type: application/json
